# TestCI

./: .gitignore  .travis.yml  CMakeLists.txt  deploy.sh
cmake/: version.h.in
src/: main.cpp
